# gallery-inspector

./: .gitignore  README.md  benchmark_metadata.py  build_exe.py  main.py  pyproject.toml  requirements.txt  run_app.py  scratch.py  scratch_exifread.py  tkinter_app.py
dashboard/: app.py  flet_app.py
gallery_inspector/: analysis.py  common.py  convertor.py  database.py  export.py  figures.py  filtering.py  fixes.py  generate.py  select.py
gallery_inspector/custom/: organize.py  organize_canon.py  organize_phone.py
gallery_inspector_ui/: __init__.py  app.py  tabs.py
tests/: test_analyze_single_file.py  test_analyze_video.py  test_cli.py  test_database.py  test_exiftool_integration.py  test_export.py  test_figures.py  test_generate.py  test_generate_table.py
ui/: app.py  components.py  tabs.py  theme.py
