[project]
name = "gallery_inspector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio~=2.37.0",
    "loguru~=0.7.3",
    "matplotlib~=3.10.1",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "pillow~=11.1.0",
    "pymediainfo~=7.0.1",
    "rawpy~=0.24.0",
    "tqdm~=4.67.1",
    "streamlit>=1.51.0",
    "streamlit-aggrid>=1.2.0",
    "streamlit-extras>=0.7.8",
    "plotly>=5.24.1",
    "flet[all]==0.28.3",
    "kaleido>=0.2.1"
]
